--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # MongoDB Connection
-MONGO_URI=
-MONGO_DB_NAME=
+MONGO_URI=mongodb+srv://anhhnl:welcometocampmate@anhhnl.r9uab.mongodb.net/campmate
+MONGO_DB_NAME=campmate
 
 # Server Configuration
-PORT=
-HOST=
+PORT=3000
+HOST=localhost
